# advent-of-code-2025

./: .gitignore  Cargo.toml
solutions/day-1/c++/: day1.cpp  day1a.cpp
solutions/day-1/python/: day1.py
solutions/day-1/rust/: Cargo.toml  day1.rs
solutions/day-2/c++/: day2.cpp
solutions/day-2/python/: day2.py
solutions/day-2/rust/: Cargo.toml  day2.rs
solutions/day-3/c++/: day3.cpp
solutions/day-3/python/: day3.py
solutions/day-3/rust/: Cargo.toml  day3.rs
solutions/day-4/c++/: day4.cpp
solutions/day-4/python/: day4.py
solutions/day-4/rust/: Cargo.toml  day4.rs
solutions/day-5/c++/: day5.cpp
solutions/day-5/python/: day5.py
solutions/day-5/rust/: Cargo.toml  day5.rs
solutions/day-6/c++/: day6.cpp
solutions/day-6/python/: day6.py
solutions/day-6/rust/: Cargo.toml  day6.rs
solutions/day-7/c++/: day7.cpp
solutions/day-7/python/: day7.py
